# ufs

./: .gitignore  LICENSE  README.md
libufs/: CMakeLists.txt  libufs.h  libufs_bcache.c  libufs_blist.c  libufs_fd.c  libufs_file.c  libufs_fileset.c  libufs_ilist.c  libufs_inode.c  libufs_internel.c  libufs_internel.h  libufs_jornal.c  libufs_minode.c  libufs_thread.c  libufs_thread.h  libufs_transcation.c  libufs_vfs.c  libufs_zlist.c  test.c
libufs/libul/: ulrb.h
libufs_example/: CMakeLists.txt  main.c
libufs_on_fuse/: build.sh  main.c
libul/: LICENSE  ulrb.h
ufs_lib/: CMakeLists.txt  libufs.c  libufs.h  libufs_bcache.c  libufs_blist.c  libufs_fd.c  libufs_internel.h  libufs_jornal.c
